--- a/launcher/package.json
+++ b/launcher/package.json
@@ -7,8 +7,11 @@
     "start": "electron ."
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "electron": "^3.0.5",
+    "jquery": "^3.3.1",
     "pkg": "^4.3.4",
-    "electron": "^3.0.5"
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "electron-packager": "^12.2.0"
