--- a/launcherNew/package.json
+++ b/launcherNew/package.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "concurrently": "^4.0.1",
     "electron": "^3.0.5",
@@ -42,7 +43,7 @@
       "build/",
       "node_modules/"
     ],
-    "directories":{
+    "directories": {
       "buildResources": "assets"
     }
   }
