--- a/launcher/package.json
+++ b/launcher/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.3",
     "electron": "^3.0.5",
     "jquery": "^3.3.1",
+    "opn": "^5.4.0",
     "pkg": "^4.3.4",
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
