--- a/launcher/exokit-launcher-win32-x64/resources/app/package.json
+++ b/launcher/exokit-launcher-win32-x64/resources/app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
+    "downloads-folder": "^1.0.1",
     "electron": "^3.0.5",
     "jquery": "^3.3.1",
     "opn": "^5.4.0",
