--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mkdirp": "^0.5.1",
     "nan": "^2.10.0",
     "native-audio-deps": "0.0.55",
+    "native-browser-deps": "0.0.2",
     "native-canvas-deps": "0.0.50",
     "native-graphics-deps": "0.0.20",
     "native-openvr-deps": "0.0.17",
