--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/node_modules
-/build
-/package-lock.json
-/CMakeFiles
-/CMakeCache.txt
-/app
+node_modules
+build
+package-lock.json
+CMakeFiles
+CMakeCache.txt
 .DS_Store
 .idea
 .exokit_history
 .localStorage
 .node-gyp
+/app
