Fix ESLint indentation rule for case statements
See https://eslint.org/docs/rules/indent#switchcase

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "rules": {
         "indent": [
             "warn",
-            2
+            2,
+            { "SwitchCase": 1 }
         ],
         "linebreak-style": [
             "error",
