--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "upng-js": "^2.1.0",
     "vm-one": "0.0.22",
     "webgl-to-opengl": "0.0.12",
+    "wgot": "^0.0.3",
     "window-classlist": "0.0.4",
     "window-fetch": "0.0.9",
     "window-selector": "0.0.5",
