--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "exokit-home": "0.0.70",
     "fake-indexeddb": "^2.0.4",
     "fault-zone": "0.0.20",
+    "favicon-get": "0.0.2",
     "he": "^1.1.1",
     "history": "^4.7.2",
     "hterm-repl": "0.0.10",
