--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ matrix:
   - os: osx
     osx_image: xcode10.1
     before_install:
+    - brew install ruby
     - brew install glfw glew
     install:
     - npm install -g appdmg
