--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "rebuild": "shx rm -rf node_modules && npm cache clean --force && npm install",
     "serve": "serve examples",
     "start": "node .",
-    "test:ci": "TEST_ENV=ci npm run test:command -- --full-trace --exit",
+    "test:ci": "set TEST_ENV=ci npm run test:command -- --full-trace --exit",
     "test:command": "mocha --full-trace tests/unit/__setup.test.js tests/unit/*.test.js tests/unit/**/*.test.js",
     "test:watch": "npm run test:command -- --watch"
   },
