--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,8 @@ after_test:
       mv node-v10.14.2-win-x64 node
       $env:Path = "$pwd\node;$env:Path";
       .\node\npm install
-      .\node\npm run test:ci
+      $env:TEST_ENV = 'ci'
+      .\node\npm run test:command
       bash scripts/testRun.sh
       set version "$env:APPVEYOR_REPO_TAG_NAME"
       if ([string]::IsNullOrEmpty("$version")) { set version "$env:APPVEYOR_REPO_COMMIT".Substring(0, 8) }
