--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ matrix:
     - unset NVM_NODEJS_ORG_MIRROR
     - "./node/bin/npm install"
     - export TEST_ENV=ci
-    - "./node/bin/npm run test:command"
+    - "./node/bin/npm run test"
     - install_name_tool -change '@rpath/OpenVR.framework/Versions/A/OpenVR' '@loader_path/../../node_modules/native-openvr-deps/bin/osx64/OpenVR.framework/Versions/A/OpenVR'
       build/Release/exokit.node
     - mkdir -p /tmp/Exokit.app/Contents/MacOS
