--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "rebuild": "shx rm -rf node_modules && npm cache clean --force && npm install",
     "serve": "serve examples",
     "start": "node .",
-    "test": "mocha --full-trace --exit tests/unit/__setup.test.js tests/unit/*.test.js tests/unit/**/*.test.js",
+    "test": "mocha --full-trace --exit --bail tests/unit/__setup.test.js tests/unit/*.test.js tests/unit/**/*.test.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
