--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint": "eslint src tests",
     "rebuild": "shx rm -rf node_modules && npm cache clean --force && npm install",
     "serve": "serve examples",
-    "start": "node .",
-    "test": "./node_modules/mocha/bin/mocha --full-trace --exit --bail tests/unit/__setup.test.js tests/unit/*.test.js tests/unit/**/*.test.js",
+    "start": "node --experimental-worker .",
+    "test": "node --experimental-worker node_modules/mocha/bin/mocha --full-trace --exit --bail tests/unit/__setup.test.js tests/unit/*.test.js tests/unit/**/*.test.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
