--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "window-selector": "0.0.6",
     "window-worker": "0.0.100",
     "window-xhr": "0.0.23",
+    "worker-native": "0.0.3",
     "ws": "^6.1.2"
   },
   "devDependencies": {
