--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "eslint": "^5.2.0",
     "express": "^4.16.3",
     "find": "^0.2.9",
-    "mocha": "^5.2.0",
+    "mocha": "^6.0.0-1",
     "ndb": "^1.0.23",
     "serve": "^9.4.0",
     "shx": "^0.3.2",
