--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "native-canvas-deps": "0.0.50",
     "native-graphics-deps": "0.0.20",
     "native-openvr-deps": "0.0.18",
-    "native-webrtc-deps": "0.0.30",
     "native-video-deps": "0.0.30",
+    "native-webrtc-deps": "0.0.30",
     "node-ipc": "^9.1.1",
     "node-localstorage": "^1.3.1",
     "parse-int": "^1.0.2",
@@ -78,6 +78,7 @@
     "redirect-output": "^1.0.0",
     "repl.history": "^0.1.4",
     "rimraf": "^2.6.2",
+    "unescape": "^1.0.1",
     "vm-one": "0.0.32",
     "webgl-to-opengl": "0.0.15",
     "window-classlist": "0.0.4",
