--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "native-graphics-deps": "0.0.20",
     "native-openvr-deps": "0.0.18",
     "native-video-deps": "github:ngokevin/node-native-video-deps#android",
-    "native-webrtc-deps": "0.0.30",
+    "native-webrtc-deps": "github:ngokevin/node-native-webrtc-deps#android2",
     "node-ipc": "^9.1.1",
     "node-localstorage": "^1.3.1",
     "parse-int": "^1.0.2",
