--- a/metadata/appdmg.json
+++ b/metadata/appdmg.json
@@ -1,6 +1,6 @@
 {
   "title": "Exokit",
-  "icon": "Exokit.app/Contents/MacOS/icon.png",
+  "icon": "Exokit.app/Contents/MacOS/assets/icon.png",
   "contents": [
     { "x": 448, "y": 344, "type": "link", "path": "/Applications" },
     { "x": 192, "y": 344, "type": "file", "path": "Exokit.app" }
