--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ matrix:
       skip_cleanup: true
   - os: osx
     osx_image: xcode10.1
+    node_js:
+    - "11.6.0"
     install:
     - npm install -g appdmg
     - curl "https://nodejs.org/dist/v11.6.0/node-v11.6.0-darwin-x64.tar.gz" >node.tar.gz
