--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
   <!-- This .apk has no Java code itself, so set hasCode to false. -->
   <application
       android:allowBackup="false"
-      android:label="@string/app_name"
+      android:label="Exokit"
       android:hasCode="false">
 
       <meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only"/>
@@ -18,7 +18,7 @@
     <!-- Our activity is the built-in NativeActivity framework class.
          This will take care of integrating with our NDK code. -->
     <activity android:name="android.app.NativeActivity"
-        android:label="@string/app_name"
+        android:label="Exokit"
         android:screenOrientation="landscape"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
         android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
