--- a/android/app/oculusmobile-build.gradle
+++ b/android/app/oculusmobile-build.gradle
@@ -36,22 +36,13 @@ android {
     externalNativeBuild {
         cmake {
             // version '3.10.2'
-            path '../CMakeLists.txt'
+            path '../oculusmobile-CMakeLists.txt'
         }
     }
     lintOptions {
         abortOnError false
     }
 }
-
-
-/* dependencies {
-    implementation 'com.google.vr:sdk-base:1.190.0'
-
-    // Obj - a simple Wavefront OBJ file loader
-    // https://github.com/javagl/Obj
-    implementation 'de.javagl:obj:0.2.1'
-} */
 
 android {
   sourceSets {
