--- a/launcher/package.json
+++ b/launcher/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "exokit-launcher",
+  "name": "launcher",
   "version": "0.1.0",
-  "description": "Exokit Launcher | Settings, Updates and Current News.",
-  "main": "App.js",
-  "scripts": {
-    "start": "electron ."
-  },
+  "private": true,
   "dependencies": {
-    "ajv": "^6.5.4",
-    "bootstrap": "^4.1.3",
-    "downloads-folder": "^1.0.1",
-    "electron": "^3.0.5",
-    "jquery": "^3.3.1",
-    "opn": "^5.4.0",
-    "pkg": "^4.3.4",
-    "popper.js": "^1.14.4",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "^2.1.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8",
+    "react-scripts": "3.0.0"
   },
-  "devDependencies": {
-    "electron-packager": "^12.2.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
