Bugfix launcher homepage in package.json

--- a/launcher/package.json
+++ b/launcher/package.json
@@ -2,7 +2,7 @@
   "name": "launcher",
   "version": "0.1.0",
   "private": true,
-  "homepage": "launcher/build/",
+  "homepage": ".",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
